<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".HandheldActivity"
    android:id="@+id/main_layout"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingEnd="10dp"
            android:scaleType="fitCenter"
            android:background="@null"
            android:layout_gravity="top"
            android:src="@drawable/dismiss_white"
            android:id="@+id/button_dismiss"
            android:onClick="onButtonDismissClick" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:id="@+id/filename_spinner" />

       <ImageButton
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="15dp"
            android:scaleType="fitCenter"
            android:background="@null"
            android:layout_gravity="top"
            android:src="@drawable/send_white"
            android:id="@+id/button_send"
            android:onClick="onButtonSendClick" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/linear_layout_debug"
        android:visibility="gone" >

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_random_measurement"
            android:onClick="onButtonAddRandomMeasurementClick" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/send_all_measurements"
            android:onClick="onButtonSendAllMeasurementsClick" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/linear_layout_measure_header">

        <TextView
            android:text="@string/caption_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:id="@+id/text_view_caption" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="5dp"
            android:id="@+id/image_view_mode"
            android:src="@drawable/running_white"
            android:scaleType="fitCenter" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingStart="5dp"
            android:id="@+id/image_view_mood"
            android:src="@drawable/average"
            android:scaleType="fitCenter" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:text="@string/no_measure_text"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/text_view_center" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:id="@+id/linear_layout_graph_view" >

            <TextView
                android:text="@string/axis_label_y"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:id="@+id/text_view_axis_y" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/frame_layout_container"
                android:layout_weight="1"
                android:layout_marginTop="5dp" />

            <TextView
                android:text="@string/axis_label_x"
                android:textSize="12sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:id="@+id/text_view_axis_x" />

        </LinearLayout>

    </FrameLayout>

</LinearLayout>
